welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:12: error: value += is not a member of Int
    c+=x
     ^